--- a/style.css
+++ b/style.css
@@ -27,3 +27,24 @@ canvas {
     color: #fff;
     font-size: 1.2em;
 }
+
+#start-button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+#controls {
+    margin-top: 20px;
+    color: #fff;
+    text-align: center;
+}
+
+#controls h3 {
+    margin-bottom: 10px;
+}
+
+#controls p {
+    margin: 5px 0;
+}
