--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
     background-color: #222;
     border: 2px solid #fff;
     padding: 20px;
+    width: 100%;
+    max-width: 1200px;
+    height: 100%;
+    max-height: 800px;
+    box-sizing: border-box;
 }
 
 .sidebar {
@@ -27,6 +32,7 @@ body {
 }
 
 .tetris-container {
+    position: relative;
     background-color: #222;
     padding: 20px;
 }
@@ -57,4 +63,17 @@ canvas {
     width: 100px;
     height: 100px;
     background-color: #fff;
+}
+
+#game-over {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    font-size: 2em;
+    display: none;
 }
