--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     background-color: #000;
     margin: 0;
     overflow: hidden;
@@ -15,10 +15,10 @@ body {
     background-color: #222;
     border: 2px solid #fff;
     padding: 20px;
-    width: 100%;
-    max-width: 1200px;
-    height: 100%;
-    max-height: 800px;
+    width: 90%;
+    max-width: 1080px;
+    height: 90%;
+    max-height: 720px;
     box-sizing: border-box;
 }
 
@@ -60,9 +60,13 @@ canvas {
 }
 
 #illustration-container {
-    width: 100px;
-    height: 100px;
-    background-color: #fff;
+    width: 90px;
+    height: 90px;
+}
+
+#illustration {
+    width: 100%;
+    height: 100%;
 }
 
 #game-over {
