--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
     background-color: #000;
     margin: 0;
     overflow: hidden;
@@ -15,9 +15,9 @@ body {
     background-color: #222;
     border: 2px solid #fff;
     padding: 20px;
-    width: 90%;
-    max-width: 1080px;
-    height: 90%;
+    width: 80%;
+    max-width: 1200px;
+    height: 80%;
     max-height: 720px;
     box-sizing: border-box;
 }
@@ -27,19 +27,23 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 20px;
+    margin: 0 10px;
     color: #fff;
+    flex: 1;
 }
 
 .tetris-container {
     position: relative;
     background-color: #222;
     padding: 20px;
+    flex: 2;
 }
 
 canvas {
     background-color: #111;
     border: 1px solid #fff;
+    width: 100%;
+    height: auto;
 }
 
 #score-container {
@@ -60,13 +64,17 @@ canvas {
 }
 
 #illustration-container {
-    width: 270px; /* Adjusted width for 2:1 aspect ratio */
-    height: 540px; /* Adjusted height for 2:1 aspect ratio */
+    width: 100%;
+    height: auto;
+    aspect-ratio: 2 / 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #illustration {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover; /* Maintain aspect ratio */
 }
 
