--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #000;
+    background-image: url('path/to/your/background/image.png');
+    background-size: cover;
+    background-position: center;
     margin: 0;
     overflow: hidden;
 }
@@ -12,12 +15,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #222;
+    background-color: rgba(34, 34, 34, 0.8);
     border: 2px solid #fff;
     padding: 20px;
-    width: 80%;
+    width: 100%;
     max-width: 1200px;
-    height: 80%;
+    height: 100%;
     max-height: 720px;
     box-sizing: border-box;
 }
@@ -42,6 +45,10 @@ body {
 canvas {
     background-color: #111;
     border: 1px solid #fff;
+    width: 100%;
+    height: 100%;
+    max-width: 270px;
+    max-height: 540px;
 }
 
 #score-container {
