--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #000;
-    background-image: url('path/to/your/background/image.png');
+    background-image: url('./gll/background.jpg');
     background-size: cover;
     background-position: center;
     margin: 0;
