--- a/style.css
+++ b/style.css
@@ -40,13 +40,16 @@ body {
     background-color: #222;
     padding: 20px;
     flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 canvas {
     background-color: #111;
     border: 1px solid #fff;
     width: 100%;
-    height: 100%;
+    height: auto;
     max-width: 270px;
     max-height: 540px;
 }
