--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #000;
-    background-image: url('./gll/background.jpg');
+    background-image: url('gll/background.jpg');
     background-size: cover;
     background-position: center;
     margin: 0;
@@ -18,10 +18,10 @@ body {
     background-color: rgba(34, 34, 34, 0.8);
     border: 2px solid #fff;
     padding: 20px;
-    width: 100%;
+    width: 80%;
+    height: 80%;
     max-width: 1200px;
-    height: 100%;
-    max-height: 720px;
+    max-height: 900px;
     box-sizing: border-box;
 }
 
@@ -39,12 +39,10 @@ body {
     position: relative;
     background-color: #222;
     padding: 20px;
-    flex: 2;
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 270px;
-    max-height: 540px;
+    flex: 2;
 }
 
 canvas {
