--- a/tetris.css
+++ b/tetris.css
@@ -18,8 +18,8 @@ body {
     background-color: rgba(34, 34, 34, 0.8);
     border: 2px solid #fff;
     padding: 20px;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     max-width: 1200px;
     max-height: 900px;
     box-sizing: border-box;
@@ -43,6 +43,7 @@ body {
     justify-content: center;
     align-items: center;
     flex: 2;
+    height: 100%;
 }
 
 canvas {
@@ -50,6 +51,7 @@ canvas {
     border: 1px solid #fff;
     width: 100%;
     height: auto;
+    max-height: 100%;
 }
 
 #score-container {
