--- a/tetris.css
+++ b/tetris.css
@@ -38,20 +38,20 @@ body {
 .tetris-container {
     position: relative;
     background-color: #222;
-    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 2;
+    width: 100%;
     height: 100%;
+    aspect-ratio: 1 / 2; /* 1:2 のアスペクト比を維持 */
 }
 
 canvas {
     background-color: #111;
     border: 1px solid #fff;
     width: 100%;
-    height: auto;
-    max-height: 100%;
+    height: 100%;
 }
 
 #score-container {
