--- a/tetris.css
+++ b/tetris.css
@@ -23,6 +23,7 @@ body {
     max-width: 1600px;
     max-height: 900px;
     box-sizing: border-box;
+    border-radius: 10px; /* 角を丸くする */
 }
 
 .sidebar {
@@ -43,6 +44,7 @@ body {
     align-items: center;
     width: 28.125%; /* 横幅の4.5/16を占める */
     height: 100%;
+    border-radius: 10px; /* 角を丸くする */
 }
 
 canvas {
@@ -50,6 +52,7 @@ canvas {
     border: 1px solid #fff;
     width: 100%;
     height: 100%;
+    border-radius: 10px; /* 角を丸くする */
 }
 
 #score-container {
@@ -76,12 +79,14 @@ canvas {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px; /* 角を丸くする */
 }
 
 #illustration {
     width: 100%;
     height: auto;
     object-fit: contain;
+    border-radius: 10px; /* 角を丸くする */
 }
 
 #game-over {
@@ -95,18 +100,5 @@ canvas {
     text-align: center;
     font-size: 2em;
     display: none;
-}
-
-#next-block {
-    margin-top: 20px;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#next-block-canvas {
-    background-color: #111;
-    border: 1px solid #fff;
+    border-radius: 10px; /* 角を丸くする */
 }
