--- a/tetris.css
+++ b/tetris.css
@@ -13,8 +13,8 @@ body {
 
 .container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: stretch;
     background-color: rgba(34, 34, 34, 0.8);
     border: 2px solid #fff;
     padding: 20px;
@@ -29,49 +29,41 @@ body {
 .left-sidebar, .right-sidebar {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0 10px;
+    justify-content: space-between;
+    width: 15%;
+    height: 100%;
     color: #fff;
-    width: 15%; /* 横幅の15%を占める */
-    height: 100%;
 }
 
-.tetris-container {
-    position: relative;
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70%; /* 横幅の70%を占める */
-    height: 100%;
-    border-radius: 10px; /* 角を丸くする */
-}
-
-canvas {
-    background-color: #111;
-    border: 1px solid #fff;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px; /* 角を丸くする */
-}
-
-.score-container, .controls-container, .ranking-container, .ad-container, .illustration-container {
+.left-sidebar .illustration-container,
+.right-sidebar .score-container,
+.right-sidebar .controls-container,
+.right-sidebar .ranking-container,
+.right-sidebar .ad-container {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     border-radius: 10px;
     text-align: center;
-    box-sizing: border-box; /* ボックスサイズをボーダーを含むようにする */
 }
 
-h3 {
-    margin-bottom: 10px;
-}
-
-.illustration-container img {
+.left-sidebar .illustration-container img {
     width: 100%;
     height: auto;
     object-fit: contain;
+    border-radius: 10px; /* 角を丸くする */
+}
+
+.tetris-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: 100%;
+}
+
+canvas {
+    background-color: #111;
+    border: 1px solid #fff;
     border-radius: 10px; /* 角を丸くする */
 }
